# instant-agent

./: .env-template  .gitignore  README.md  pyproject.toml  setup.py
agent/: agent.py  claude_engine.py  cli.py  execution_engine.py  execution_memory.json  hello_world.py  system_prompt.txt  tools.py
